Tests/Runtime2/Error/RetryOnly/.build/timedretrygoal.pr
{
  "name": "TimedRetryGoal",
  "description": "No goal was provided. Please send the %goalForLlm% content (or describe the task you want completed) so I can generate the required JSON plan.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %timedRetryAttempts%, write to %timedRetryAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "math",
          "action": "add",
          "parameters": [
            {
              "name": "A",
              "value": "%timedRetryAttempts%",
              "type": "string"
            },
            {
              "name": "B",
              "value": 1,
              "type": "long"
            }
          ],
          "defaults": null
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%timedRetryAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%pr%",
              "type": "string"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ]
        }
      ],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022timed fail\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [],
      "intent": null,
      "onError": null,
      "cache": null,
      "timeout": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Tests/Runtime2/Error/RetryOnly/TimedRetryGoal.goal",
  "prPath": "/Tests/Runtime2/Error/RetryOnly/.build/timedretrygoal.pr",
  "hash": "c3682ca3c59a1d65c0fcf535415978b1d1d02bc7019282c388101c838ccf5612",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}